<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/blue">

    <TextView android:text="@string/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btnSpotify"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"/>

    <Button
        android:id="@+id/btnScore"
        android:layout_marginTop="16dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/super_duo"/>

    <Button
        android:id="@+id/btnBuild"
        android:layout_marginTop="16dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"/>

    <Button
        android:id="@+id/btnXyz"
        android:layout_marginTop="16dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"/>

    <Button
        android:id="@+id/btnCapstone"
        android:layout_marginTop="16dp"
        android:layout_width="240dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_red"
        android:layout_height="wrap_content"
        android:text="@string/capstone"/>

</LinearLayout>
